--- a/index.html
+++ b/index.html
@@ -255,15 +255,30 @@
             ></text>
           </g>
           <g ontouchstart id="b-0" transform="translate(-30, 20)">
-            <rect
-              class="layer--base"
-              rx="1"
-              ry="1"
-              x="-8"
-              y="-8"
-              width="16"
-              height="16"
-            ></rect>
+            <polygon class="layer--base" points="-12,-8 8,-8 12,8 -8,8">
+              <animate
+                id="poly-0-animate"
+                attributeName="points"
+                from="0,-8 0,-8 0,8 0,8"
+                to="-8,-8 8,-8 8,8 -8,8"
+                begin="0s"
+                repeatCount="100"
+                fill="freeze"
+                dur="2s"
+                values="
+                -8,-8 -8,-8 -8,8 -8,8;
+                -8,-8 -4,-8 -8,8 -8,8;
+                -8,-8 8,-8 8,8 -8,8;
+                -8,-8 8,-8 8,8 -8,8;
+                -8,-8 8,-8 8,8 -8,8;"
+                keySplines="
+          0.1 0.8 0.2 1;
+          0.1 0.8 0.2 1;
+          0.4 0.8 0.2 1;
+          0.9 0.3 0.8 1"
+                calcMode="spline"
+              />
+            </polygon>
             <rect
               class="layer--edge"
               rx="1"
@@ -292,15 +307,30 @@
             ></text>
           </g>
           <g ontouchstart id="b-1" transform="translate(-10, 20)">
-            <rect
-              class="layer--base"
-              rx="1"
-              ry="1"
-              x="-8"
-              y="-8"
-              width="16"
-              height="16"
-            ></rect>
+            <polygon class="layer--base" points="-12,-8 8,-8 12,8 -8,8">
+              <animate
+                id="poly-1-animate"
+                attributeName="points"
+                from="0,-8 0,-8 0,8 0,8"
+                to="-8,-8 8,-8 8,8 -8,8"
+                begin="0.1s"
+                repeatCount="100"
+                fill="freeze"
+                dur="2s"
+                values="
+            -8,-8 -8,-8 -8,8 -8,8;
+            -8,-8 -4,-8 -8,8 -8,8;
+            -8,-8 8,-8 8,8 -8,8;
+            -8,-8 8,-8 8,8 -8,8;
+            -8,-8 8,-8 8,8 -8,8;"
+                keySplines="
+      0.1 0.8 0.2 1;
+      0.1 0.8 0.2 1;
+      0.4 0.8 0.2 1;
+      0.9 0.3 0.8 1"
+                calcMode="spline"
+              />
+            </polygon>
             <rect
               class="layer--edge"
               rx="1"
@@ -329,15 +359,30 @@
             ></text>
           </g>
           <g ontouchstart id="b-2" transform="translate(10, 20)">
-            <rect
-              class="layer--base"
-              rx="1"
-              ry="1"
-              x="-8"
-              y="-8"
-              width="16"
-              height="16"
-            ></rect>
+            <polygon class="layer--base" points="-12,-8 8,-8 12,8 -8,8">
+              <animate
+                id="poly-2-animate"
+                attributeName="points"
+                from="0,-8 0,-8 0,8 0,8"
+                to="-8,-8 8,-8 8,8 -8,8"
+                begin="0.2s"
+                repeatCount="100"
+                fill="freeze"
+                dur="2s"
+                values="
+            -8,-8 -8,-8 -8,8 -8,8;
+            -8,-8 -4,-8 -8,8 -8,8;
+            -8,-8 8,-8 8,8 -8,8;
+            -8,-8 8,-8 8,8 -8,8;
+            -8,-8 8,-8 8,8 -8,8;"
+                keySplines="
+      0.1 0.8 0.2 1;
+      0.1 0.8 0.2 1;
+      0.4 0.8 0.2 1;
+      0.9 0.3 0.8 1"
+                calcMode="spline"
+              />
+            </polygon>
             <rect
               class="layer--edge"
               rx="1"
