--- a/index.html
+++ b/index.html
@@ -40,11 +40,6 @@
               />
             </polygon>
           </mask>
-          <mask id="bibble">
-            <rect x="0" y="0" width="1" height="1">
-              <animate id="hello" attributeName="x" />
-            </rect>
-          </mask>
           <mask id="mask-b">
             <rect
               fill="white"
@@ -61,15 +56,12 @@
                 from="0 0"
                 to="16 0"
                 dur="4s"
-                begin="0s"
+                begin="indefinite"
                 repeatCount="1"
                 fill="freeze"
-                values="0 0; 0 0; 20 0; 20 0; 20 0"
+                values="0 0; 16 0"
                 keySplines="
-                0.1 0.8 0.2 1;
-                0.1 0.8 0.2 1;
-                0.1 0.8 0.2 1;
-                0.1 0.8 0.2 1"
+                0.1 0.8 0.2 1;"
                 calcMode="spline"
               />
             </polygon>
@@ -349,7 +341,6 @@
               height="17"
             ></rect>
             <text
-              mask="url(#mask-b)"
               alignment-baseline="middle"
               dominant-baseline="central"
               text-anchor="middle"
