--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
             ></rect>
             <polygon fill="black" points="-12,-8 8,-8 12,8 -8,8">
               <animateTransform
+                id="mask-b-animate"
                 attributeName="transform"
                 type="translate"
                 from="0 0"
