--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
                 from="0 0"
                 to="16 0"
                 dur="4s"
-                begin="indefinite"
-                repeatCount="1"
+                begin="0s"
+                repeatCount="100"
                 fill="freeze"
                 values="0 0; 16 0"
                 keySplines="
