--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
               width="16"
               height="16"
             ></rect>
-            <polygon fill="black" points="-12,-8 8,-8 12,8 -8,8">
+            <polygon fill="grey" points="-12,-8 8,-8 12,8 -8,8">
               <animateTransform
                 id="mask-b-animate"
                 attributeName="transform"
