--- a/index.html
+++ b/index.html
@@ -323,15 +323,7 @@
                 calcMode="spline"
               />
             </polygon>
-            <rect
-              class="layer--edge"
-              rx="1"
-              ry="1"
-              x="-8"
-              y="-8"
-              width="16"
-              height="16"
-            ></rect>
+
             <rect
               class="layer--overlay"
               rx="1"
@@ -349,6 +341,39 @@
               x="0"
               y="1"
             ></text>
+            <polygon class="layer--mask" points="-8,-8 8,-8 8,8 -8,8">
+              <animate
+                id="poly-0-mask-animate"
+                attributeName="points"
+                from="-8,-8 8,-8 8,8 -8,8"
+                to="8,-8 8,-8 8,8 8,8"
+                begin="0s"
+                repeatCount="1"
+                fill="freeze"
+                dur="2s"
+                values="
+                -8,-8 8,-8 8,8 -6,8;
+                -8,-8 8,-8 8,8 -6,8;
+                -8,-8 8,-8 8,8 0,8;
+                8,-8 8,-8 8,8 8,8;
+                8,-8 8,-8 8,8 8,8;"
+                keySplines="
+          0.1 0.8 0.2 1;
+          0.1 0.8 0.2 1;
+          0.4 0.8 0.2 1;
+          0.9 0.3 0.8 1"
+                calcMode="spline"
+              />
+            </polygon>
+            <rect
+              class="layer--edge"
+              rx="1"
+              ry="1"
+              x="-8"
+              y="-8"
+              width="16"
+              height="16"
+            ></rect>
           </g>
           <g ontouchstart id="b-1" transform="translate(-10, 20)">
             <polygon class="layer--base" points="0,-8 0,-8 0,8 0,8">
