--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
             text-anchor="middle"
             x="-100"
             y="0"
+            opacity="0"
           >
             <tspan>NICE</tspan>
             <animate
@@ -167,15 +168,7 @@
                 calcMode="spline"
               />
             </polygon>
-            <rect
-              class="layer--edge"
-              rx="1"
-              ry="1"
-              x="-8"
-              y="-8"
-              width="16"
-              height="16"
-            ></rect>
+
             <rect
               class="layer--overlay"
               rx="1"
@@ -193,6 +186,39 @@
               x="0"
               y="1"
             ></text>
+            <polygon class="layer--mask" points="-8,-8 8,-8 8,8 -8,8">
+              <animate
+                id="poly-5-mask-animate"
+                attributeName="points"
+                from="-8,-8 8,-8 8,8 -8,8"
+                to="8,-8 8,-8 8,8 8,8"
+                begin="0s"
+                repeatCount="1"
+                fill="freeze"
+                dur="2s"
+                values="
+                -8,-8 8,-8 8,8 -6,8;
+                -8,-8 8,-8 8,8 -6,8;
+                -8,-8 8,-8 8,8 4,8;
+                8,-8 8,-8 8,8 8,8;
+                8,-8 8,-8 8,8 8,8;"
+                keySplines="
+          0.1 0.8 0.2 1;
+          0.1 0.8 0.2 1;
+          0.4 0.8 0.2 1;
+          0.9 0.3 0.8 1"
+                calcMode="spline"
+              />
+            </polygon>
+            <rect
+              class="layer--edge"
+              rx="1"
+              ry="1"
+              x="-8"
+              y="-8"
+              width="16"
+              height="16"
+            ></rect>
           </g>
           <g ontouchstart id="b-4" transform="translate(-20, 0)">
             <polygon class="layer--base" points="0,-8 0,-8 0,8 0,8">
@@ -219,15 +245,7 @@
                 calcMode="spline"
               />
             </polygon>
-            <rect
-              class="layer--edge"
-              rx="1"
-              ry="1"
-              x="-8"
-              y="-8"
-              width="16"
-              height="16"
-            ></rect>
+
             <rect
               class="layer--overlay"
               rx="1"
@@ -245,6 +263,39 @@
               x="0"
               y="1"
             ></text>
+            <polygon class="layer--mask" points="-8,-8 8,-8 8,8 -8,8">
+              <animate
+                id="poly-4-mask-animate"
+                attributeName="points"
+                from="-8,-8 8,-8 8,8 -8,8"
+                to="8,-8 8,-8 8,8 8,8"
+                begin="0s"
+                repeatCount="1"
+                fill="freeze"
+                dur="2s"
+                values="
+                -8,-8 8,-8 8,8 -6,8;
+                -8,-8 8,-8 8,8 -6,8;
+                -8,-8 8,-8 8,8 4,8;
+                8,-8 8,-8 8,8 8,8;
+                8,-8 8,-8 8,8 8,8;"
+                keySplines="
+          0.1 0.8 0.2 1;
+          0.1 0.8 0.2 1;
+          0.4 0.8 0.2 1;
+          0.9 0.3 0.8 1"
+                calcMode="spline"
+              />
+            </polygon>
+            <rect
+              class="layer--edge"
+              rx="1"
+              ry="1"
+              x="-8"
+              y="-8"
+              width="16"
+              height="16"
+            ></rect>
           </g>
           <g ontouchstart id="b-6" transform="translate(20, 0)">
             <polygon class="layer--base" points="0,-8 0,-8 0,8 0,8">
@@ -271,15 +322,7 @@
                 calcMode="spline"
               />
             </polygon>
-            <rect
-              class="layer--edge"
-              rx="1"
-              ry="1"
-              x="-8"
-              y="-8"
-              width="16"
-              height="16"
-            ></rect>
+
             <rect
               class="layer--overlay"
               rx="1"
@@ -297,6 +340,39 @@
               x="0"
               y="1"
             ></text>
+            <polygon class="layer--mask" points="-8,-8 8,-8 8,8 -8,8">
+              <animate
+                id="poly-6-mask-animate"
+                attributeName="points"
+                from="-8,-8 8,-8 8,8 -8,8"
+                to="8,-8 8,-8 8,8 8,8"
+                begin="0s"
+                repeatCount="1"
+                fill="freeze"
+                dur="2s"
+                values="
+                -8,-8 8,-8 8,8 -6,8;
+                -8,-8 8,-8 8,8 -6,8;
+                -8,-8 8,-8 8,8 4,8;
+                8,-8 8,-8 8,8 8,8;
+                8,-8 8,-8 8,8 8,8;"
+                keySplines="
+          0.1 0.8 0.2 1;
+          0.1 0.8 0.2 1;
+          0.4 0.8 0.2 1;
+          0.9 0.3 0.8 1"
+                calcMode="spline"
+              />
+            </polygon>
+            <rect
+              class="layer--edge"
+              rx="1"
+              ry="1"
+              x="-8"
+              y="-8"
+              width="16"
+              height="16"
+            ></rect>
           </g>
           <g ontouchstart id="b-0" transform="translate(-30, 20)">
             <polygon class="layer--base" points="0,-8 0,-8 0,8 0,8">
@@ -354,7 +430,7 @@
                 values="
                 -8,-8 8,-8 8,8 -6,8;
                 -8,-8 8,-8 8,8 -6,8;
-                -8,-8 8,-8 8,8 0,8;
+                -8,-8 8,-8 8,8 4,8;
                 8,-8 8,-8 8,8 8,8;
                 8,-8 8,-8 8,8 8,8;"
                 keySplines="
@@ -400,15 +476,7 @@
                 calcMode="spline"
               />
             </polygon>
-            <rect
-              class="layer--edge"
-              rx="1"
-              ry="1"
-              x="-8"
-              y="-8"
-              width="16"
-              height="16"
-            ></rect>
+
             <rect
               class="layer--overlay"
               rx="1"
@@ -426,6 +494,39 @@
               x="0"
               y="1"
             ></text>
+            <polygon class="layer--mask" points="-8,-8 8,-8 8,8 -8,8">
+              <animate
+                id="poly-1-mask-animate"
+                attributeName="points"
+                from="-8,-8 8,-8 8,8 -8,8"
+                to="8,-8 8,-8 8,8 8,8"
+                begin="0s"
+                repeatCount="1"
+                fill="freeze"
+                dur="2s"
+                values="
+                -8,-8 8,-8 8,8 -6,8;
+                -8,-8 8,-8 8,8 -6,8;
+                -8,-8 8,-8 8,8 4,8;
+                8,-8 8,-8 8,8 8,8;
+                8,-8 8,-8 8,8 8,8;"
+                keySplines="
+          0.1 0.8 0.2 1;
+          0.1 0.8 0.2 1;
+          0.4 0.8 0.2 1;
+          0.9 0.3 0.8 1"
+                calcMode="spline"
+              />
+            </polygon>
+            <rect
+              class="layer--edge"
+              rx="1"
+              ry="1"
+              x="-8"
+              y="-8"
+              width="16"
+              height="16"
+            ></rect>
           </g>
           <g ontouchstart id="b-2" transform="translate(10, 20)">
             <polygon class="layer--base" points="0,-8 0,-8 0,8 0,8">
@@ -452,15 +553,7 @@
                 calcMode="spline"
               />
             </polygon>
-            <rect
-              class="layer--edge"
-              rx="1"
-              ry="1"
-              x="-8"
-              y="-8"
-              width="16"
-              height="16"
-            ></rect>
+
             <rect
               class="layer--overlay"
               rx="1"
@@ -478,6 +571,39 @@
               x="0"
               y="1"
             ></text>
+            <polygon class="layer--mask" points="-8,-8 8,-8 8,8 -8,8">
+              <animate
+                id="poly-2-mask-animate"
+                attributeName="points"
+                from="-8,-8 8,-8 8,8 -8,8"
+                to="8,-8 8,-8 8,8 8,8"
+                begin="0s"
+                repeatCount="1"
+                fill="freeze"
+                dur="2s"
+                values="
+                -8,-8 8,-8 8,8 -6,8;
+                -8,-8 8,-8 8,8 -6,8;
+                -8,-8 8,-8 8,8 4,8;
+                8,-8 8,-8 8,8 8,8;
+                8,-8 8,-8 8,8 8,8;"
+                keySplines="
+          0.1 0.8 0.2 1;
+          0.1 0.8 0.2 1;
+          0.4 0.8 0.2 1;
+          0.9 0.3 0.8 1"
+                calcMode="spline"
+              />
+            </polygon>
+            <rect
+              class="layer--edge"
+              rx="1"
+              ry="1"
+              x="-8"
+              y="-8"
+              width="16"
+              height="16"
+            ></rect>
           </g>
           <g ontouchstart id="b-3" transform="translate(30, 20)">
             <polygon class="layer--base" points="0,-8 0,-8 0,8 0,8">
@@ -504,15 +630,7 @@
                 calcMode="spline"
               />
             </polygon>
-            <rect
-              class="layer--edge"
-              rx="1"
-              ry="1"
-              x="-8"
-              y="-8"
-              width="16"
-              height="16"
-            ></rect>
+
             <rect
               class="layer--overlay"
               rx="1"
@@ -530,6 +648,39 @@
               x="0"
               y="1"
             ></text>
+            <polygon class="layer--mask" points="-8,-8 8,-8 8,8 -8,8">
+              <animate
+                id="poly-3-mask-animate"
+                attributeName="points"
+                from="-8,-8 8,-8 8,8 -8,8"
+                to="8,-8 8,-8 8,8 8,8"
+                begin="0s"
+                repeatCount="1"
+                fill="freeze"
+                dur="2s"
+                values="
+                -8,-8 8,-8 8,8 -6,8;
+                -8,-8 8,-8 8,8 -6,8;
+                -8,-8 8,-8 8,8 4,8;
+                8,-8 8,-8 8,8 8,8;
+                8,-8 8,-8 8,8 8,8;"
+                keySplines="
+          0.1 0.8 0.2 1;
+          0.1 0.8 0.2 1;
+          0.4 0.8 0.2 1;
+          0.9 0.3 0.8 1"
+                calcMode="spline"
+              />
+            </polygon>
+            <rect
+              class="layer--edge"
+              rx="1"
+              ry="1"
+              x="-8"
+              y="-8"
+              width="16"
+              height="16"
+            ></rect>
           </g>
           <g ontouchstart id="b-7" transform="translate(0, -20)">
             <polygon class="layer--base" points="0,-8 0,-8 0,8 0,8">
@@ -556,15 +707,7 @@
                 calcMode="spline"
               />
             </polygon>
-            <rect
-              class="layer--edge"
-              rx="1"
-              ry="1"
-              x="-8"
-              y="-8"
-              width="16"
-              height="16"
-            ></rect>
+
             <rect
               class="layer--overlay"
               rx="1"
@@ -582,6 +725,39 @@
               x="0"
               y="1"
             ></text>
+            <polygon class="layer--mask" points="-8,-8 8,-8 8,8 -8,8">
+              <animate
+                id="poly-7-mask-animate"
+                attributeName="points"
+                from="-8,-8 8,-8 8,8 -8,8"
+                to="8,-8 8,-8 8,8 8,8"
+                begin="0s"
+                repeatCount="1"
+                fill="freeze"
+                dur="2s"
+                values="
+                -8,-8 8,-8 8,8 -6,8;
+                -8,-8 8,-8 8,8 -6,8;
+                -8,-8 8,-8 8,8 4,8;
+                8,-8 8,-8 8,8 8,8;
+                8,-8 8,-8 8,8 8,8;"
+                keySplines="
+          0.1 0.8 0.2 1;
+          0.1 0.8 0.2 1;
+          0.4 0.8 0.2 1;
+          0.9 0.3 0.8 1"
+                calcMode="spline"
+              />
+            </polygon>
+            <rect
+              class="layer--edge"
+              rx="1"
+              ry="1"
+              x="-8"
+              y="-8"
+              width="16"
+              height="16"
+            ></rect>
           </g>
         </g>
       </svg>
